# sequins

./: .bumpversion.cfg  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml
.claude/: modeling.md
documentation/: mint.sequins.tn.2.graffle  model-prompting-session.md  modeling-handoff.md  tabletsvg-color-override-handoff.md
documentation/architecture/: layout_engine_api.md  layout_pass_design.md  mdb_interaction.md  sequence_diagram_api.md
documentation/models/: bead.mls  bead.xcm  sequence.mls  sequence.xcm  sequins.mls  sequins.xcm
documentation/notation/: mls-commands.md  xcm-format.md
documentation/tools/: gen_elevator_svg.py  gen_elevator_svg_adapter.py  gen_session_md.py
examples/: diagram_type.yaml  ev_scenario_REF.yaml  s1.yaml
issues/: RENAME_STATUS.md
src/configuration/: curtain_style.yaml  curtain_styles.yaml  diagram.yaml  diagram_theme.yaml  diagram_themes.yaml  layout.yaml  string_color.yaml
src/seq/: __main__.py
src/sequins/: __main__.py  config.py  curtain.py  geometry.py  layout.py  layout_engine.py  render.py  sd_adapter.py  text.py  theme.py
src/sequins/configuration/: canvas.yaml  diagram_theme.yaml
tests/: elevator_adapter_script.py  elevator_script.py  test_adapter_elevator.py  test_engine_snapshot.py  test_layout_color.py  test_layout_depth.py  test_layout_horizontal.py  test_layout_knots.py  test_layout_placement.py  test_population.py  test_render.py  test_sd_adapter.py
